--- a/sanity-backend/package.json
+++ b/sanity-backend/package.json
@@ -15,6 +15,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/client": "^3.4.1",
     "@sanity/vision": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,6 +24,7 @@
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
+    "@sanity/cli": "^3.1.4",
     "@sanity/eslint-config-studio": "^2.0.1",
     "eslint": "^8.6.0",
     "prettier": "^2.8.1",
