--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@sanity/client": "^3.3.0",
     "axios": "^0.27.2",
     "gapi-script": "^1.2.0",
-    "next": "12.1.6",
+    "next": "^13.5.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
