--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   "dependencies": {
     "@react-oauth/google": "^0.2.6",
     "@sanity/client": "^3.3.0",
-    "axios": "^0.27.2",
+    "@sanity/types": "^3.34.0",
+    "@sanity/vision": "^3.0.0",
+    "axios": "^1.6.7",
     "gapi-script": "^1.2.0",
     "next": "^13.5.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^4.3.1",
+    "sanity": "^3.18.1",
+    "styled-components": "^5.2.0",
     "uuidv4": "^6.2.13",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
+    "@sanity/eslint-config-studio": "^2.0.1",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
@@ -29,6 +34,6 @@
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24",
-    "typescript": "4.6.4"
+    "typescript": "^5.4.2"
   }
 }
