--- a/package.json
+++ b/package.json
@@ -15,23 +15,23 @@
     "@sanity/vision": "^3.0.0",
     "axios": "^1.6.7",
     "gapi-script": "^1.2.0",
-    "next": "^13.5.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.3.1",
+    "next": "^14.1.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "sanity": "^3.18.1",
-    "styled-components": "^5.2.0",
+    "styled-components": "^6.1.8",
     "uuidv4": "^6.2.13",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^2.0.1",
-    "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.4",
+    "@types/node": "^20.11.28",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "autoprefixer": "^10.4.7",
     "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "^14.1.3",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24",
     "typescript": "^5.4.2"
